# interviews

./: .gitignore
20210426_irobot_ingredients/: .gitignore  Makefile  README.md
20210426_irobot_ingredients/.github/workflows/: pipeline.yml
20210426_irobot_ingredients/data/: PriceBreakdown_2.json  RecipesListData.json  abk_price_breakdown_1.json  abk_recipe_list.json  recipe_list_1.txt  recipe_list_2.txt
20210426_irobot_ingredients/docs/: 20210406_fleet_provisioning.pptx
20210426_irobot_ingredients/spikes/async/: async_download.py
20210426_irobot_ingredients/spikes/dunder/: dunder_methods.py
20210426_irobot_ingredients/spikes/invert_binary_tree/: invert_binary_tree.py  reverse_linked_list.py
20210426_irobot_ingredients/spikes/merge_sort/: merge_sort.py
20210426_irobot_ingredients/spikes/parallel_01/: multi_processing.py  multi_threading.py  process_queue.py
20210426_irobot_ingredients/spikes/parallel_02/: concurrent.py  multi_processing.py  multi_threading.py
20210426_irobot_ingredients/spikes/parallel_03/: create_thumbnails.py  create_thumbnails_prallel.py
20210426_irobot_ingredients/src/: api_key_loader.py  env_loader.py  ingredients_input.py  main.py  recipe_price_breakdown.py  recipe_view.py  search_recipes_by_ingredients.py  shopping_list.py  yes_no_generator.py
20210426_irobot_ingredients/tests/: context.py  test_api_key_loader.py  test_env_loader.py  test_ingredients_input.py  test_main.py  test_recipe_price_breakdown.py  test_recipe_view.py  test_search_recipes_by_ingredients.py  test_shopping_list.py
20220929_aai_job/: .envrc  001_DeployTerraform.sh  002_DeployLambdas.sh  CommonLib.sh  Deploy.sh  LICENSE  README.md
20220929_aai_job/.github/workflows/: pipeline.yml
20220929_aai_job/docs/: 20220822_fleet_provisioning.pptx  aai_db_tables.drawio
20250613_global_logic/gl_010_yaml_groovy/: .gitignore  01_yaml_groovy.md  Jenkinsfile  README.md
20250613_global_logic/gl_010_yaml_groovy/011_python/: Jenkinsfile  README.md  pyproject.toml
20250613_global_logic/gl_010_yaml_groovy/011_python/.pytest_cache/v/cache/: nodeids
20250613_global_logic/gl_010_yaml_groovy/011_python/.ruff_cache/0.11.13/: 1598509608472113068  3928314251925562175  4783667407001334368  8959132346571634192
20250613_global_logic/gl_010_yaml_groovy/011_python/docs/: CLAUDE.md
20250613_global_logic/gl_010_yaml_groovy/011_python/src/gl_011/: __init__.py  fizz_buzz.py  hello_global_logic.py  meta_data.py
20250613_global_logic/gl_010_yaml_groovy/011_python/tests/: __init__.py  test_fizz_buzz.py  test_hello_global_logic.py  test_meta_data.py
20250613_global_logic/gl_010_yaml_groovy/012_typescript/: .eslintrc.json  .prettierrc  Jenkinsfile  README.md  (+4 more)
20250613_global_logic/gl_020_terraform_pulumi/: 021_terraform_aws_website  022_pulumi_gcp_website  02_terraform_pulumi.md
20250613_global_logic/gl_030_aws_serverless/: .envrc  .gitignore  001_setup-env.sh  002_deploy-terraform.sh  003_deploy-services.sh  InstallTools.sh  README.md  common-lib.sh  config.dev.yml  config.yml  deploy.sh
20250613_global_logic/gl_030_aws_serverless/services/gl-hello/: .coverage  Makefile  UV_SETUP.md  coverage.xml  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_all.txt  requirements_test.txt  serverless.yml
20250613_global_logic/gl_030_aws_serverless/services/gl-hello/.serverless/: cloudformation-template-update-stack.json  requirements  requirements.txt  serverless-state.json
20250613_global_logic/gl_030_aws_serverless/services/gl-hello/src/: gl_hello.py  gl_hello_io.py
20250613_global_logic/gl_030_aws_serverless/services/gl-python-template/: Makefile  README.md  publish.sh  pyproject.toml  requirements_all.txt  requirements_test.txt  serverless.yml
20250613_global_logic/gl_030_aws_serverless/services/gl-python-template/src/: gl_hello.py
20250613_global_logic/gl_030_aws_serverless/services/gl-python-template/tests/: context.py  test_gl_hello.py
20250613_global_logic/gl_040_app_store/: .envrc  README.md
20250613_global_logic/gl_050_python_scripting/: README.md  run_examples.py
20250613_global_logic/gl_050_python_scripting/system_monitor/: pyproject.toml  system_monitor.py
20250613_global_logic/gl_050_python_scripting/web_scraper/: pyproject.toml  web_scraper.py
20250613_global_logic/gl_060_docker_k8s/: README.md
20250613_global_logic/gl_070_sql/: README.md
20250613_global_logic/gl_080_linux_cmds/: README.md
20250613_global_logic/gl_090_design_pattern/: .coverage  README.md  pyproject.toml  run_examples.py
20250613_global_logic/gl_090_design_pattern/.claude/: settings.local.json
20250613_global_logic/gl_090_design_pattern/.pytest_cache/v/cache/: nodeids
20250613_global_logic/gl_090_design_pattern/src/design_patterns/: __init__.py  adapter.py  builder.py  command.py  decorator.py  factory.py  observer.py  singleton.py  strategy.py
20250613_global_logic/gl_090_design_pattern/tests/: test_adapter.py  test_builder.py  test_command.py  test_decorator.py  test_factory.py  test_observer.py  test_singleton.py  test_strategy.py
20250613_global_logic/gl_100_coding/: README.md
20250613_global_logic/gl_110_binary_tree/: README.md  pyproject.toml
20250613_global_logic/gl_110_binary_tree/.pytest_cache/v/cache/: nodeids
20250613_global_logic/gl_110_binary_tree/.ruff_cache/0.12.0/: 1831136804420874382  593421579019617906
20250613_global_logic/gl_110_binary_tree/src/binary_tree_prep/: __init__.py  binary_tree.py  examples.py
20250613_global_logic/gl_110_binary_tree/tests/: test_binary_tree.py  test_examples.py
20250715_apple_challenge/: pyproject.toml
20250715_apple_challenge/tests/: test_solution.py
20250715_apple_chellenge/: CLAUDE.md  pyproject.toml
20250715_apple_chellenge/tests/: debug_test.py  test_comprehensive.py  test_edge_cases.py  test_performance.py
20250715_apple_exercises/: pyproject.toml
20250715_apple_exercises/src/abk_apple/: __init__.py  advanced_challenges.py  easy_challenges.py  mid_challenges.py
20250715_apple_exercises/tests/: test_advanced_challenges.py  test_easy_challenges.py  test_mid_challenges.py
(+109 files in other folders)
