[project]
name = "abk-aapl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "coverage",
    "ruff"
]

[project.scripts]
abk-aapl = "abk_aapl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
