[project]
name = "system-monitor"
version = "0.1.0"
description = "System monitoring utility for DevOps infrastructure monitoring"
authors = [{name = "DevOps Team", email = "devops@example.com"}]
dependencies = [
    "psutil>=5.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"