[project]
name = "web-scraper"
version = "0.1.0"
description = "Web scraping utility for DevOps monitoring"
authors = [{name = "DevOps Team", email = "devops@example.com"}]
dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"